fix menu bug 1. fix menu to height bug (use overflow and max-height) 2. fix menu lowwer than content (use z-index)

--- a/css/main.css
+++ b/css/main.css
@@ -3059,6 +3059,10 @@ body.is-touch .poptrox-popup .closer {
     border-radius: 20px;
     border-color: gray;
     visibility : hidden;
+    max-height: 80vh;
+    height: auto;
+    overflow: auto;
+    z-index: 999;
 }
 
 #munuButton {
